<resources>
    <string name="app_name">SuryaUsahaMandiri</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="user_hint">user</string>
    <string name="no_description">no description</string>
    <string name="btn_scan">SCAN</string>
    <string name="btn_stop">STOP</string>
    <string name="minus">-</string>
    <string name="save_btn">SAVE</string>
    <string name="select_cp_number">Select CP Number</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_clear">CLEAR</string>
    <string name="btn_reset">RESET</string>
    <string name="warning_hh_not_ready">UHF Reader not ready</string>
    <string name="btn_remove">REMOVE</string>
    <string name="stock_opname">Stock Opname</string>
    <string name="label_select_destination">Select Destination</string>
    <string name="label_select_location">Select Location</string>
    <string name="label_select_warehouse">Select Warehouse</string>
    <string name="zero">0</string>
    <string name="slash">/</string>
    <string name="label_total_detected">Total Detected:</string>
    <string name="label_detect">Detect</string>
    <string name="label_qty">Qty</string>
    <string name="weak">weak</string>
    <string name="strong">strong</string>
    <string name="rssi">RSSI</string>
    <string name="btn_ok">OK</string>
    <string name="surya_usaha_mandiri_logo">Surya Usaha Mandiri Logo</string>
    <string name="product">Product</string>
    <string name="hint_search_product">Search Product</string>
    <string name="uom_code">uom code</string>
    <string name="result_qty_label">result qty</string>
    <string name="note_label">note</string>
    <string name="btn_delete_note">DELETE</string>
    <string name="already_registered_warning">failed, please kindly check that the tag is not registered yet!</string>
    <string name="already_registered_warning_id">GAGAL! RFID ini sudah diregistrasi</string>
    <string name="select_product_btn">Select Product</string>
    <string name="select_batch_btn">Select Batch</string>
    <string name="cust_color_hint">Cust. Color. </string>
</resources>