<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.opname.StockOpname">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"
        android:background="@color/primaryColor"
        android:id="@+id/toolbar"
        style="@style/ThemeOverlay.Material3.Toolbar.Surface">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:text="@string/stock_opname"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/settingBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                app:rippleColor="#36FFFFFF"
                style="@style/Widget.Material3.Button.OutlinedButton"
                app:icon="@drawable/ic_settings_24"
                app:iconTint="@color/white"
                app:iconPadding="0dp"
                app:iconGravity="textEnd"
                app:strokeWidth="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:minHeight="0dp"
                android:minWidth="0dp"/>
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/locationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_keyboard_arrow_right_24"
        app:iconGravity="end"
        app:iconSize="24dp"
        android:text="@string/label_select_location"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/locationBtn"
        app:layout_constraintBottom_toTopOf="@+id/scanBtn"
        android:layout_margin="12dp"
        android:background="@drawable/bg_outline"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <SearchView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/search"/>
            <com.google.android.material.button.MaterialButton
                android:visibility="visible"
                android:id="@+id/resetBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                style="@style/SmallOutlineButton"
                app:strokeColor="@color/red_300"
                android:textColor="@color/red_300"
                android:text="@string/btn_reset"/>

            <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                app:backgroundTint="@color/green_400"
                style="@style/SmallButton"
                android:text="@string/save_btn"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primaryColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/no"
                    style="@style/TextAppearance.Material3.LabelSmall"
                    android:layout_marginStart="4dp"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="No."/>

                <TextView
                    android:id="@+id/prodName"
                    style="@style/TextAppearance.Material3.LabelSmall"
                    android:text="Product"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/prodQty"
                    style="@style/TextAppearance.Material3.LabelSmall"
                    android:text="Qty"
                    android:textAlignment="center"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/prodDetect"
                    style="@style/TextAppearance.Material3.LabelSmall"
                    android:text="Detect"
                    android:textAlignment="center"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content" />
                <Space
                    android:id="@+id/prodCheck"
                    android:layout_width="48dp"
                    android:layout_height="16dp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:background="@color/gray_300"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:background="@color/gray_300"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:id="@+id/soRv"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primaryColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_total_detected"/>
            <TextView
                android:id="@+id/totalDetected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:text="@string/zero"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"/>
            <TextView
                android:id="@+id/totalQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/zero"/>

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:visibility="visible"
        android:id="@+id/scanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/btn_scan"/>

</androidx.constraintlayout.widget.ConstraintLayout>