<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.login.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_header"
            android:scaleType="fitXY"
            android:contentDescription="@string/no_description" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:elevation="2dp"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/surya_usaha_mandiri_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="PT SURYA USAHA MANDIRI"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="44dp"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="SIGN IN TO YOUR ACCOUNT"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:hint="@string/email_hint"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/password_hint"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login_btn"
            android:text="LOGIN"
            android:textColor="@color/white"
            app:cornerRadius="2dp"/>

    </LinearLayout>

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginTop="120dp"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        android:layout_marginStart="-100dp"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@drawable/ic_logo_sum_white"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:tint="@color/gray_300"-->
<!--        tools:ignore="ContentDescription"-->
<!--        android:contentDescription="@string/no_description" />-->

<!--    <com.google.android.material.appbar.MaterialToolbar-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:titleTextColor="@color/white"-->
<!--        android:background="@color/primaryColor"-->
<!--        android:id="@+id/login_toolbar"-->
<!--        style="@style/ThemeOverlay.Material3.Toolbar.Surface">-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->
<!--            <ImageView-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:src="@drawable/ic_logo_sum_white"/>-->
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:textColor="@color/white"-->
<!--                style="@style/TextAppearance.Material3.TitleLarge"-->
<!--                android:text="PT SURYA USAHA MANDIRI"/>-->
<!--        </LinearLayout>-->
<!--    </com.google.android.material.appbar.MaterialToolbar>-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="48dp"-->
<!--        android:elevation="2dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/login_toolbar"-->
<!--        android:orientation="vertical">-->

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="52dp"-->
<!--            android:layout_margin="12dp"-->
<!--            android:src="@drawable/logo_sintar"-->
<!--            android:contentDescription="@string/no_description"/>-->

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="64dp"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/navy"-->
<!--            android:text="PT SURYA USAHA MANDIRI"-->
<!--            style="@style/TextAppearance.Material3.TitleLarge"-->
<!--            android:textStyle="bold"/>-->


<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="24dp"-->
<!--            android:background="@color/lightBackground"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            app:cardElevation="4dp">-->
<!--            -->
<!--        </androidx.cardview.widget.CardView>-->
<!--    </LinearLayout>-->

    <TextView
        android:id="@+id/textbtm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="RFID Total Solution"/>
</androidx.constraintlayout.widget.ConstraintLayout>