<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    tools:context=".activities.ui.tag_register.TagRegisterAdvanced">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:visibility="gone"
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/secondaryTextLight"
                android:src="@drawable/ic_play_arrow_24"
                android:contentDescription="@string/no_description"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="TAG Registration"/>

            <ImageView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_more_vert_24"
                app:tint="@color/primaryColor"
                android:contentDescription="@string/no_description"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settingBtn"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:icon="@drawable/ic_settings_24"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconTint="@color/primaryColor"
                app:rippleColor="#36FFFFFF"
                app:strokeWidth="0dp" />
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/autoSw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_outline"
        android:padding="12dp"
        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:thumbIcon="@drawable/ic_check_white_24dp"
        app:thumbIconTint="@color/switch_icon_tint"
        android:textSize="18sp"
        android:text="Auto Scan"/>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:background="@drawable/bg_outline"
        app:layout_constraintTop_toBottomOf="@id/autoSw"
        app:layout_constraintBottom_toTopOf="@+id/scanBtn"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:text="List" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                style="@style/SmallOutlineButton"
                app:strokeColor="@color/red_300"
                android:textColor="@color/red_300"
                android:text="@string/btn_reset"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SmallButton"
                app:backgroundTint="@color/green_300"
                android:text="SAVE"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primaryColor"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/batchRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/text"
            app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>